<resources>
    <string name="desc"></string>
    <string name="NA"></string>
    <string name="agree">同意</string>
    <string name="app_name">和佳ERP</string>
    <string name="login_title">企信</string>
    <string name="login_btn">登录</string>
    <string name="loginName">账户</string>
    <string name="password">密码</string>
    <string name="company">公司</string>
    <string name="search">搜索</string>
    <string name="loginnotice">登录遇到问题？</string>
    <string name="app_pane_pic_str">图片</string>
    <string name="app_pane_location_str">位置</string>
    <string name="app_pane_file_str">文件</string>
    <string name="app_pane_camera_str">拍照</string>
    <string name="message_invalid_username_password">错误的用户名或密码</string>
    <string name="message_server_unavailable">无法连接到服务器</string>
    <string name="message_user_disabled">用户被禁用</string>
    <string name="message_user_expired">账户已过期</string>
    <string name="message_userip_no_access">IP不合法,已被禁用</string>
    <string name="unrecoverable_error">发生未知异常,连接失败</string>
    <string name="user_not_exit">用户不存在</string>
    <string name="net_connect_error">网络连接异常，请稍后重试！</string>
    <string name="net_connect_reconnected">网络连接正常！</string>
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="check_sdcard">请检查内存卡！</string>
    <string name="menu_settings">设置</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="html_network_error">网络出错，轻触屏幕重新加载</string>
    <string name="xmpp_host">192.168.43.1</string>
    <string name="xmpp_service_name">192.168.43.1</string>
    <string name="dir">/eap</string>
    <string name="app_dir">/app</string>
    <string name="db_dir">/database</string>
    <string name="img_dir">/img</string>
    <string name="title_activity_notice">NoticeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="available_chars">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ^$._-@%!#$*\\</string>
    <string name="text_size_small">small</string>
    <string name="text_size_medium">medium</string>
    <string name="text_size_large">large</string>
    <string name="ar_reg_btn">注册</string>
    <string name="ar_input_phone">请输入注册码</string>
    <string name="ar_input_code">请输入验证码</string>
    <string name="msg_default_status">将二维码/条码放入框内，即可自动扫描</string>
    <string name="commonset_wrapdata">清除数据</string>
    <string name="commonset_wrapcache">清除缓存</string>
    <string name="commonset_versioncheck">检查版本</string>
    <string name="commonset_updata">更新应用</string>
    <string name="commonset_updatadate">应用数据下载</string>
    <string name="commonset_updatabasedate">基础数据下载</string>
    <string name="commonset_setpwd">修改密码</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="about_hjsever">公司简介</string>
    <string name="about_hjpolicy">发展历程</string>
    <string name="about_hjcopyright">获得荣誉</string>
    <string name="about_hjinfor">联系我们</string>
    <string name="main_tab_im">公告</string>
    <string name="main_tab_contact">联系人</string>
    <string name="main_tab_business">业务</string>
    <string name="main_tab_workflow">审批</string>
    <string name="main_tab_my">我的</string>
    <string name="buess_Title_CenterTitle">考勤打卡</string>
    <string name="sgin_Hint_address1">正在获取考勤位置...</string>
    <string name="sgin_Hint_address2">获取地理位置失败</string>
    <string name="sgin_Hint_address3">您不在考勤范围内...</string>
    <string name="sgin_Hint_address4">请打开手机定位权限...</string>
    <string name="sgin_photouoload">签到拍照</string>
    <string name="sgin_in">签到</string>
    <string name="sgin_out">签退</string>
    <string name="menu_save_performance">保存数据</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="action_left_content_back">返回</string>
    <string name="action_right_content_save">保存</string>
    <string name="action_right_content_send">送审</string>
    <string name="action_right_content_add">新增</string>
    <string name="action_right_content_commit">提交</string>
    <string name="action_right_content_sure">确定</string>
    <string name="action_right_content_reject">驳回</string>
    <string name="action_right_content_SelectAll">全选</string>
    <string name="action_right_content_title">大标题</string>
    <string name="action_right_right_title">右标题</string>
    <string name="action_right_right1_title">右标题1</string>
    <string name="action_right_right_submit">提交</string>
    <string name="dialog_Message_saveData">正在保存数据</string>
    <string name="dialog_Message_submitData">正在提交数据</string>
    <string name="dialog_Message_upLoadData">正在加载数据</string>
    <string name="dialog_Message_selectData">正在查询数据</string>
    <string name="dialog_Message_saveSucc">保存成功</string>
    <string name="dialog_Message_upSucc">上传成功</string>
    <string name="orderFinding_Title_TlActivity">订单查询</string>
    <string name="orderFinding_Title_RightTvSearch">查询</string>
    <string name="orderFinding_Title_RightTvReset">重置</string>
    <string name="setting_Title_TlActivity">设置</string>
    <string name="setPWord_Title_TlActivity">修改密码</string>
    <string name="setPWord_Title_NowAccount">当前用户：</string>
    <string name="setPWord_Title_OldPword">请输入旧密码</string>
    <string name="setPWord_Title_Pword">请输入新密码</string>
    <string name="setPWord_Title_AgainPword">请确认新密码</string>
    <string name="setPWord_Title_PwordSee">密码可见：</string>
    <string name="setPWord_Title_PWordHintContent">注：可使用的特殊符号为  ^$._-@%!#$*\</string>
    <string name="about_Title_TvActivity">关于和佳</string>
    <string name="about_Title_Hjsever">公司简介</string>
    <string name="about_Title_Hjpolicy">发展历程</string>
    <string name="about_Title_Hjcopyright">获得荣誉</string>
    <string name="about_Title_Hjinfor">联系我们</string>
    <string name="register_Title_TvActivity">企业注册</string>
    <string name="MyInfor_Title_DepartmentName">部门：</string>
    <string name="MyInfor_Title_PhotoPortrait">个人头像</string>
    <string name="toast_Title_PortraitFail">头像设置失败</string>
    <string name="toast_Title_ChangeSucc">修改成功</string>
    <string name="toast_Title_ChangeFail">修改失败</string>
    <string name="toast_Title_ChangePhone">修改电话号码</string>
    <string name="toast_Title_ChangeRemark">修改备注</string>
    <string name="toast_Title_ChangeEmail">修改邮箱</string>
    <string name="toast_Title_CheckMsg">验证信息</string>
    <string name="toast_Title_PhoneFail">请输入正确的手机号!</string>
    <string name="toast_Title_EmailFail">请输入正确的邮箱!</string>
    <string name="oval_Title_TvActivity">审批单详情</string>
    <string name="oval_Title_ToastMsg1">驳回意见不能为空</string>
    <string name="oval_Title_ToastMsg2">网络错误，请重试！</string>
    <string name="Travel_Title_TvActivity">出差/外出单</string>
    <string name="Travel_Title_TravelName">出差人员</string>
    <string name="Travel_Title_TravelPart">所在部门</string>
    <string name="Travel_Title_TravelPartner">随行人员</string>
    <string name="Travel_Title_TravelTimeBegin">开始时间</string>
    <string name="Travel_Hint_TravelTimeBegin">请选择开始日期（必填）</string>
    <string name="Travel_Title_TravelTimeEnd">结束时间</string>
    <string name="Travel_Hint_TravelTimeEnd">请选择结束日期（必填）</string>
    <string name="Travel_Title_TravelReason">出差原因</string>
    <string name="Travel_Hint_TravelReason">请填写出差原因（必填）</string>
    <string name="Travel_Title_TravelWork">项目</string>
    <string name="Travel_Hint_TravelWork">请选择出差项目</string>
    <string name="Travel_Title_TravelClient">客户</string>
    <string name="Travel_Title_TravelPay">预付金额</string>
    <string name="search_Title_TvActivity">搜索</string>
    <string name="work_Title_TvActivity">工作日志</string>
    <string name="work_Tile_TaskTime">任务时间</string>
    <string name="work_Hint_TaskTime">请选择任务时间（必填）</string>
    <string name="work_Tile_WkAddress">工作地点</string>
    <string name="work_Hint_WkAddress">请选择工作地点（必填）</string>
    <string name="work_Tile_WkType">工作类型</string>
    <string name="work_Hint_WkType">请选择工作类型（必填）</string>
    <string name="work_Tile_PjName">工作项目</string>
    <string name="work_Hint_PjName">请选择工作项目（必填）</string>
    <string name="work_Tile_Address">地址</string>
    <string name="work_Tile_Contact">客户</string>
    <string name="work_Tile_contactduty">职务</string>
    <string name="work_Tile_WkTime">工时</string>
    <string name="work_Hint_WkTime">请填写工时（必填）</string>
    <string name="work_Tile_MyTheme">主题</string>
    <string name="work_Hint_MyContent_main">请填写主题(必填)</string>
    <string name="work_Tile_MyContent">内容</string>
    <string name="work_Hint_MyContent">请填写内容</string>
    <string name="toast_Hint_DateTask">请选择任务时间</string>
    <string name="toast_Hint_idWtype">请选择工作类型</string>
    <string name="toast_Hint_LogWproj">请选择工作项目</string>
    <string name="toast_Hint_decWtime">请填写工时</string>
    <string name="toast_Hint_varWtitle">请填写主题</string>
    <string name="toast_Hint_flagWadd">请选择工作地点</string>
    <string name="travel_Title_TvActivity">休假申请单</string>
    <string name="travel_Title_RejustName">驳回意见</string>
    <string name="travel_Title_LeaveName">休假人员</string>
    <string name="travel_Title_LeavePart">所在部门</string>
    <string name="travel_Title_LeavrTimeBegin">开始时间</string>
    <string name="travel_Hint_LeavrTimeBegin">请选择开始时间（必填）</string>
    <string name="travel_Title_LeavrTimeEND">结束时间</string>
    <string name="travel_Hint_LeavrTimeEND">请选择结束时间（必填）</string>
    <string name="travel_Title_LeavrType">休假类型</string>
    <string name="travel_Hint_LeavrType">请选择休假类型</string>
    <string name="travel_Title_LeavrDays">可休天数</string>
    <string name="travel_Hint_LeavrTDays">剩余可休假天数</string>
    <string name="travel_Title_LeavrDay">休假天数</string>
    <string name="travel_Hint_LeavrDay">请输入休假天数（必填）</string>
    <string name="travel_Title_LeavrReason">休假原因</string>
    <string name="travel_Hint_LeavrReason">请填写休假原因</string>
    <string name="over_Title_TvActivity">加班申请单</string>
    <string name="travel_Title_RejustNameOver">驳回意见</string>
    <string name="over_Title_OverName">加班人员</string>
    <string name="over_Title_OverPart">所在部门</string>
    <string name="over_Title_OverTimeGegin">加班日期</string>
    <string name="over_Hint_OverTimeGegin">请选择加班日期（必填）</string>
    <string name="over_Title_OverDays">加班天数</string>
    <string name="over_Hint_OverDays">请输入加班天数（必填）</string>
    <string name="over_Title_OverReson">加班原因</string>
    <string name="over_Hint_OverReson">请输入加班内容及原因（必填）</string>
    <string name="detail_Title_TvActivity">考勤异常申述</string>
    <string name="detail_Title_AbnormalName">申诉人员</string>
    <string name="detail_Title_AbnormalPart">所在部门</string>
    <string name="detail_Title_NormalDetail">考勤异常记录</string>
    <string name="detail_Title_AbnormalDate">考勤日期</string>
    <string name="detail_Hint_AbnormalDate">请选择考勤日期</string>
    <string name="detail_Title_AbnormalType">考勤类型</string>
    <string name="detail_Title_AbnormalTime">打卡时间</string>
    <string name="detail_Title_AbnormalUnderstand">异常说明</string>
    <string name="detail_Hint_AbnormalUnderstand">请填写异常说明（必填）</string>
    <string name="detail_Title_AbnormalRemark">请填写考勤说明</string>
    <string name="detail_Title_AbnormalAddDetail">添加明细</string>
    <string name="toast_Message_NetWork">请检查网络</string>
    <string name="toast_Message_CommitSucceed">提交成功</string>
    <string name="toast_Message_CommitFail">提交失败</string>
    <string name="toast_Message_GetDataFail">数据获取失败</string>
    <string name="toast_Message_DataNull">数据为空</string>
    <string name="perf_Title_TvActivity">计划录入</string>
    <string name="pfItem_Title_perfNameKpiperiod">考评周期</string>
    <string name="pfItem_Hint_perfNameKpiperiod">请选择考评周期（必填）</string>
    <string name="pfItem_Title_ConcludeTime">计划日期</string>
    <string name="pfItem_Hint_ConcludeTime">请选择计划日期（必填）</string>
    <string name="pfItem_Title_perfKPI">关键绩效指标</string>
    <string name="pfItem_Title_perfGS">工作目标</string>
    <string name="pfItem_Title_perfDelete">删除</string>
</resources>