<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">

    <include
        android:id="@+id/leave_action"
        layout="@layout/actionbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/leave_action">

        <LinearLayout style="@style/Item_LinearLayout_VerticalStyle">

            <LinearLayout
                android:id="@+id/rejust_list_leave"
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8"
                android:visibility="gone">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_RejustName"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/var_rejust_name_leave"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    android:id="@+id/nofocus_leave"
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeaveName" />

                <TextView
                    android:id="@+id/leave_name"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavePart" />

                <TextView
                    android:id="@+id/leave_part"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavrTimeBegin" />

                <TextView
                    android:id="@+id/leave_time_begin"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle2"
                    android:hint="@string/travel_Hint_LeavrTimeBegin" />
            </LinearLayout>

            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavrTimeEND" />

                <TextView
                    android:id="@+id/leave_time_end"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle2"
                    android:hint="@string/travel_Hint_LeavrTimeEND" />
            </LinearLayout>

            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavrType" />

                <Spinner
                    android:id="@+id/leave_type"
                    style="@style/Item_LinearLayout_SpRightStyle"
                    android:hint="@string/travel_Hint_LeavrType" />
            </LinearLayout>

            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavrDays" />

                <TextView
                    android:id="@+id/have_days"
                    style="@style/Item_LinearLayout_TvRightTitleStyle"
                    android:hint="@string/travel_Hint_LeavrTDays" />
            </LinearLayout>


            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavrDay" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/leave_days"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:inputType="numberDecimal"
                    android:hint="@string/travel_Hint_LeavrDay" />
            </LinearLayout>


            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:minHeight="@dimen/size_110">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_LeavrReason" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/leave_reason"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:hint="@string/travel_Hint_LeavrReason" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
