<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_business_dgtdrech"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">

    <include
        android:id="@+id/dgtdech_action"
        layout="@layout/actionbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dgtdech_action"
        android:scrollbars="none">

        <LinearLayout style="@style/Item_LinearLayout_VerticalStyle">

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_TaskTime" />


                <TextView
                    android:id="@+id/log_date_task"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle2"
                    android:hint="@string/work_Hint_TaskTime" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_WkAddress" />


                <TextView
                    android:id="@+id/log_flag_wadd"
                    style="@style/Item_LinearLayout_TvRightTitleImgDownStyle"
                    android:hint="@string/work_Hint_WkAddress" />

            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_WkType" />

                <TextView
                    android:id="@+id/log_id_wtype"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle2"
                    android:hint="@string/work_Hint_WkType" />

            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    android:id="@+id/pro_text"
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_PjName" />

                <EditText
                    android:id="@+id/log_id_wproj"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle2"
                    android:focusable="false"
                    android:hint="@string/work_Hint_PjName" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_Contact" />

                <TextView
                    android:id="@+id/log_id_corr"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_WkTime" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_dec_wtime"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_MyTheme" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_var_wtitle"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:hint="@string/work_Hint_MyContent_main" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_1"
                android:minHeight="@dimen/size_110">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/work_Tile_MyContent" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/log_var_remark"
                    style="@style/Item_LinearLayout_EdRightTitleStyle" />
                <!--android:hint="@string/work_Hint_MyContent"-->
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
