<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">

    <include
        android:id="@+id/over_action"
        layout="@layout/actionbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/over_action">

        <LinearLayout style="@style/Item_LinearLayout_VerticalStyle">

            <LinearLayout
                android:id="@+id/rejust_list_over"
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8"
                android:visibility="gone">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_RejustNameOver"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/var_rejust_name_over"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>


            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/over_Title_OverName" />

                <TextView
                    android:id="@+id/over_name"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/over_Title_OverPart" />

                <TextView
                    android:id="@+id/over_part"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/over_Title_OverTimeGegin" />

                <TextView
                    android:id="@+id/over_time_begin"
                    style="@style/Item_LinearLayout_TvRightTitleImgStyle2"
                    android:hint="@string/over_Hint_OverTimeGegin" />
            </LinearLayout>

            <LinearLayout style="@style/Item_LinearLayout_HorizontalStyle">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/over_Title_OverDays" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/over_days"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:hint="@string/over_Hint_OverDays"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8"
                android:minHeight="@dimen/size_110">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/over_Title_OverReson" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/over_reason"
                    style="@style/Item_LinearLayout_EdRightTitleStyle"
                    android:hint="@string/over_Hint_OverReson" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
