<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context="com.hjnerp.business.activity.TravelBusiness">

    <include
        android:id="@+id/travel_bss_action"
        layout="@layout/actionbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/travel_bss_action">

        <LinearLayout style="@style/Item_LinearLayout_VerticalStyle">
            <LinearLayout
                android:id="@+id/rejust_list"
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8"
                android:visibility="gone">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/travel_Title_RejustName"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/var_rejust_name"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>
            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelName" />

                <TextView
                    android:id="@+id/travel_name"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelPart" />

                <TextView
                    android:id="@+id/travel_part"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/size_40">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelPartner" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/travel_partner"
                    style="@style/Item_LinearLayout_EdRightTitleStyle" />
            </LinearLayout>


            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelTimeBegin" />

                <TextView
                    android:id="@+id/travel_time_begin"
                    style="@style/Item_LinearLayout_TvRightTitleStyle"
                    android:hint="@string/Travel_Hint_TravelTimeBegin" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelTimeEnd" />

                <TextView
                    android:id="@+id/travel_time_end"
                    style="@style/Item_LinearLayout_TvRightTitleStyle"
                    android:hint="@string/Travel_Hint_TravelTimeEnd" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/size_100">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelReason" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/travel_reason"
                    style="@style/Item_LinearLayout_EdRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_8">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelWork" />

                <TextView
                    android:id="@+id/travel_work"
                    style="@style/Item_LinearLayout_TvRightTitleStyle"
                    android:hint="@string/Travel_Hint_TravelWork" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_marginTop="@dimen/size_1">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelClient" />

                <TextView
                    android:id="@+id/travel_client"
                    style="@style/Item_LinearLayout_TvRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                style="@style/Item_LinearLayout_HorizontalStyle"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/size_40">

                <TextView
                    style="@style/Item_LinearLayout_TVLeftTieleStyle2"
                    android:text="@string/Travel_Title_TravelPay" />

                <com.hjnerp.widget.ClearEditText
                    android:id="@+id/travel_pay"
                    android:inputType="numberDecimal"
                    style="@style/Item_LinearLayout_EdRightTitleStyle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/addtravel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginTop="@dimen/size_1"
                android:background="@color/white"
                android:gravity="center"
                android:text="+ 添加行程"
                android:textColor="#27a4e3"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
